# intake

./: pyproject.toml
intake/readers/: entry.py
